# heaps-android

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  hashlink.ps1  jni.c
.github/: dependabot.yml
.github/workflows/: android-macOS.yml  android-windows.yml  android.yml
config/: base.hxml  main.hxml  pak.hxml
heaps-android-app/: README.md  build.gradle  gradle.properties  local.properties  settings.gradle
heaps-android-app/heapsapp/: build.gradle
heaps-android-app/heapsapp/src/main/: AndroidManifest.xml
heaps-android-app/heapsapp/src/main/cpp/: native-lib.cpp
heaps-android-app/heapsapp/src/main/java/io/heaps/android/: HeapsActivity.java
heaps-android-app/heapsapp/src/main/java/org/libsdl/app/: SDLActivity.java
openal-nativetools/: CMakeLists.txt
